work around CR 24292078 - more safe fix (2)